homepage general layout

--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
     --blue: #133F67;
     --black: #1F1E1E;
     --red: #EE4266;
-    --green: #B9E28C;
+    --green: #74b031;
     --yellow: #D6D84F;
 }
 
