--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -1,7 +1,6 @@
 .links-header {
     display: flex;
     align-content: center;
-    /* justify-content: space-between; */
     gap: 7px;
 }
 
@@ -12,7 +11,7 @@
 
 
 .links-header > a {
-    transform: translateY(5px);
+    transform: translateY(4px);
     font-weight: 500;
     font-size: 15px;
     display: flex;
@@ -20,4 +19,19 @@
     justify-content: space-between;
     /* text-decoration: underline; */
     color: var(--blue);
+}
+
+.loadbar {
+    margin: 10px 0;
+    font-weight: 500;
+    font-size: 11px;
+    color: var(--green);
+}
+
+.empty {
+    color: var(--red);
+    font-size: 13px;
+    padding-top: 3px;
+    font-weight: 400;
+    opacity: 0.2;
 }
