--- a/src/routes/home.css
+++ b/src/routes/home.css
@@ -6,12 +6,13 @@
 
 .links-header > h2 {
     font-weight: 500;
-    font-size: 20px;
+    font-size: 26px;
+    margin-bottom: 5px;
 }
 
 
 .links-header > a {
-    transform: translateY(4px);
+    transform: translateY(9px);
     font-weight: 500;
     font-size: 15px;
     display: flex;
