--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,7 @@
 
 body {
     margin: 40px;
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 300;
     color: var(--black);
 }
