--- a/src/app.css
+++ b/src/app.css
@@ -37,11 +37,20 @@ li {
   margin-top: 3px;
 }
 
+/* This is probably all scuffed. Feel free to fix me. */
+
 h2 {
   font-family: 'Roboto Mono', monospace;
   font-size: 20px;
   font-weight: bold;
 }
+
+h3 {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 16px;
+  font-weight: bold;
+}
+
 
 button {
   color: blue !important;  
