--- a/src/app.css
+++ b/src/app.css
@@ -55,3 +55,32 @@ h3 {
 button {
   color: blue !important;  
 }
+
+.callout {
+    font-weight: 500;
+    font-size: 26px;
+    margin-bottom: px;
+}
+
+.loadbar {
+    margin: 10px 0;
+    font-weight: 500;
+    font-size: 11px;
+    color: var(--green);
+}
+
+.empty {
+    color: var(--red);
+    font-size: 13px;
+    padding-top: 3px;
+    font-weight: 400;
+    opacity: 0.2;
+}
+
+
+.secondary {
+    font-weight: 600;
+    padding-top: 20px;
+    margin: 0;
+    font-size: 18px;
+}
