--- a/src/lib/components/link.css
+++ b/src/lib/components/link.css
@@ -10,7 +10,27 @@
     font-size: 18px;
 }
 
-.content {
-  font-size: 14px;
-  white-space: pre-wrap;
+p {
+    font-size: 14px;
+    white-space: pre-wrap;
+    width: 100%;
+}
+
+.toolbox {
+    padding-top: 10px;
+    margin: 10px 5px 0px 5px;
+}
+
+.author {
+    color: var(--blue);
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.tooltip {
+    font-weight: 500;
+}
+
+.tooltip .tool {
+    color: var(--blue);
 }
