--- a/src/app.css
+++ b/src/app.css
@@ -89,6 +89,16 @@ textarea, input {
     border-radius: 2px;
 }
 
+input {
+    padding: 1px 0 0 10px;
+}
+
 textarea:focus, input:focus{
     outline: var(--blue);
+}
+
+button {
+    color: var(--blue) !important;
+    font-weight: 600;
+    margin: 5px 0;
 }
